--- a/gateway.properties
+++ b/gateway.properties
@@ -1,5 +1,2 @@
-some.other.property=apigateway-prop
-some.prop=22448889gtw
 some.property=HelloWorld1
-test.property=apigateway-prop123
-some=123String
+some.value=HelloWorld2
