--- a/client.properties
+++ b/client.properties
@@ -1,3 +1,2 @@
-some.other.property=client-prop
-some.prop=22448889client
-test.property=client-prop123
+some.property=HelloWorld5
+some.value=HelloWorld6
