--- a/service.properties
+++ b/service.properties
@@ -1,3 +1,2 @@
-some.other.property=service-prop
-test.property=service-prop001
-some.prop=22448889srv
+some.property=HelloWorld3
+some.value=HelloWorld4
