--- a/gateway.properties
+++ b/gateway.properties
@@ -1,2 +1,6 @@
 some.property=HelloWorld1000
 some.value=HelloWorld2000
+management.endpoints.web.exposure.include=bus-refresh,refresh,bus-env
+
+spring.rabbitmq.host = localhost
+spring.rabbitmq.port = 5672
