--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,8 @@
 some.other.property=app-prop
 test.property=appp-prop12311
 some.prop=22448889appp
+
+management.endpoints.web.exposure.include=bus-refresh,refresh,bus-env
+
+spring.rabbitmq.host = localhost
+spring.rabbitmq.port = 5672
