--- a/application.properties
+++ b/application.properties
@@ -6,3 +6,5 @@ management.endpoints.web.exposure.include=bus-refresh,refresh,bus-env
 
 spring.rabbitmq.host = localhost
 spring.rabbitmq.port = 5672
+spring.rabbitmq.username = guest
+spring.rabbitmq.password = guest
