--- a/client.properties
+++ b/client.properties
@@ -1,5 +1,5 @@
-some.property=HelloWorld5000
-some.value=HelloWorld6000
+some.property=HelloWorld50008888888
+some.value=HelloWorld60008888888888
 management.endpoints.web.exposure.include=bus-refresh,refresh,bus-env
 spring.rabbitmq.host = localhost
 spring.rabbitmq.port = 5672
