--- a/gateway.properties
+++ b/gateway.properties
@@ -1,5 +1,5 @@
-some.property=HelloWorld445
-some.value=HelloWorld667
+some.property=HelloWorld4458888888
+some.value=HelloWorld6678888888
 management.endpoints.web.exposure.include=bus-refresh,refresh,bus-env
 spring.rabbitmq.host = localhost
 spring.rabbitmq.port = 5672
